--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,9 @@
     "description": "A small proof-of-concept image derivative engine",
     "type": "project",
     "require": {
-        "slim/slim": "^3.11"
+        "slim/slim": "^3.11",
+        "intervention/image": "^2.4",
+        "davidepastore/slim-validation": "^0.5.1"
     },
     "require-dev": {
         "phpspec/phpspec": "^5.1",
@@ -15,5 +17,10 @@
             "name": "Kevin McCulloch",
             "email": "p.kevin.mcculloch@gmail.com"
         }
-    ]
+    ],
+    "autoload": {
+        "psr-4": {
+            "Imgsvc\\": "src/"
+        }
+    }
 }
