--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,6 @@
         "davidepastore/slim-validation": "^0.5.1"
     },
     "require-dev": {
-        "phpspec/phpspec": "^5.1",
         "squizlabs/php_codesniffer": "^3.3"
     },
     "license": "GPL-3.0+",
@@ -22,5 +21,8 @@
         "psr-4": {
             "Imgsvc\\": "src/"
         }
+    },
+    "scripts": {
+      "phpcs": "phpcs --standard=PSR12 ./src/"
     }
 }
